--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 DB_HOST = mongodb+srv://dburdin:dD6VLlN4XK5rBoxg@cluster0.il2hbnu.mongodb.net/?retryWrites=true&w=majority
 PORT=8000
 SECRET_KEY=dsadsahg3j21gjhsadgjhg2jh31dasdas43243
+CLOUDINARY_NAME=dhh42ueby
+CLOUDINARY_API_KEY=636798444855926
+CLOUDINARY_SECRET_KEY=qiexNfmOtv4K5gUF06zB-VCEJSA
