--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST = mongodb+srv://dburdin:dD6VLlN4XK5rBoxg@cluster0.il2hbnu.mongodb.net/?retryWrites=true&w=majority
+DB_HOST=mongodb+srv://dburdin:dD6VLlN4XK5rBoxg@cluster0.il2hbnu.mongodb.net/your-pet?retryWrites=true&w=majority
 PORT=8000
 SECRET_KEY=dsadsahg3j21gjhsadgjhg2jh31dasdas43243
 CLOUDINARY_NAME=dhh42ueby
