--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
+    "datauri": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jimp": "^0.22.8",
